Entity Framework Code First. Creado Controlador y Vistas para Artista.

--- a/PruebaAcidLabs/PruebaAcidLabs.csproj
+++ b/PruebaAcidLabs/PruebaAcidLabs.csproj
@@ -118,11 +118,25 @@
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\ArtistaController.cs" />
+    <Compile Include="Controllers\BuscarController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="DAL\SpotifyContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201507112216513_init.cs" />
+    <Compile Include="Migrations\201507112216513_init.Designer.cs">
+      <DependentUpon>201507112216513_init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201507112253277_init1.cs" />
+    <Compile Include="Migrations\201507112253277_init1.Designer.cs">
+      <DependentUpon>201507112253277_init1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201507121811022_init2.cs" />
+    <Compile Include="Migrations\201507121811022_init2.Designer.cs">
+      <DependentUpon>201507121811022_init2.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Album.cs" />
     <Compile Include="Models\Artista.cs" />
     <Compile Include="Models\Pista.cs" />
@@ -164,11 +178,13 @@
     <Content Include="Views\Home\Contact.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+    <Content Include="Views\Buscar\Index.cshtml" />
     <Content Include="Views\Artista\Create.cshtml" />
     <Content Include="Views\Artista\Delete.cshtml" />
     <Content Include="Views\Artista\Details.cshtml" />
     <Content Include="Views\Artista\Edit.cshtml" />
     <Content Include="Views\Artista\Index.cshtml" />
+    <Content Include="Views\Buscar\Buscar.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -179,6 +195,17 @@
     <Content Include="fonts\glyphicons-halflings-regular.eot" />
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201507112216513_init.resx">
+      <DependentUpon>201507112216513_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201507112253277_init1.resx">
+      <DependentUpon>201507112253277_init1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201507121811022_init2.resx">
+      <DependentUpon>201507121811022_init2.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
