--- a/PruebaAcidLabs/Web.config
+++ b/PruebaAcidLabs/Web.config
@@ -50,6 +50,10 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
+    <contexts>
+      <context type="PruebaAcidLabs.DAL.SpotifyContext, PruebaAcidLabs">
+      </context>
+    </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
