--- a/PruebaAcidLabs/PruebaAcidLabs.csproj
+++ b/PruebaAcidLabs/PruebaAcidLabs.csproj
@@ -121,13 +121,18 @@
     <Compile Include="Controllers\ArtistaController.cs" />
     <Compile Include="Controllers\BuscarController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
+    <Compile Include="Controllers\PistaController.cs" />
     <Compile Include="DAL\SpotifyContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
-    <Compile Include="Migrations\201507142050206_init.cs" />
-    <Compile Include="Migrations\201507142050206_init.Designer.cs">
-      <DependentUpon>201507142050206_init.cs</DependentUpon>
+    <Compile Include="Migrations\201507152113087_init.cs" />
+    <Compile Include="Migrations\201507152113087_init.Designer.cs">
+      <DependentUpon>201507152113087_init.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201507152123268_init1.cs" />
+    <Compile Include="Migrations\201507152123268_init1.Designer.cs">
+      <DependentUpon>201507152123268_init1.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\Album.cs" />
@@ -138,6 +143,7 @@
   <ItemGroup>
     <Content Include="App_Data\ListaAlbumes.xml" />
     <Content Include="App_Data\ListaArtistas.xml" />
+    <Content Include="App_Data\ListaPistas.xml" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="favicon.ico" />
@@ -179,6 +185,11 @@
     <Content Include="Views\Artista\Details.cshtml" />
     <Content Include="Views\Artista\Edit.cshtml" />
     <Content Include="Views\Artista\Index.cshtml" />
+    <Content Include="Views\Pista\Create.cshtml" />
+    <Content Include="Views\Pista\Delete.cshtml" />
+    <Content Include="Views\Pista\Details.cshtml" />
+    <Content Include="Views\Pista\Edit.cshtml" />
+    <Content Include="Views\Pista\Index.cshtml" />
     <Content Include="Views\Album\Create.cshtml" />
     <Content Include="Views\Album\Delete.cshtml" />
     <Content Include="Views\Album\Details.cshtml" />
@@ -199,8 +210,11 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201507142050206_init.resx">
-      <DependentUpon>201507142050206_init.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201507152113087_init.resx">
+      <DependentUpon>201507152113087_init.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201507152123268_init1.resx">
+      <DependentUpon>201507152123268_init1.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
